--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@types/mongoose": "^5.11.96",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.13.1"
   }
