Feature: frontend configuration done

--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@types/express-session": "^1.18.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
