--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "react-placeholder-image": "^0.1.8",
     "react-router": "^7.4.1",
     "tailwindcss": "^4.0.17",
     "zod": "^3.24.2",
