--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.5.0",
     "react-placeholder-image": "^0.1.8",
     "react-router": "^7.4.1",
+    "react-router-dom": "^7.5.0",
     "tailwindcss": "^4.0.17",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
